<resources>
    <string name="app_name">VNbooks</string>
    <string name="please_wait">Please wait…</string>
    <string name="class_format">Lớp %1$s</string>
    <string name="my_book">Sách của bé</string>
    <string name="my_class">Lớp của bé</string>
    <string name="my_subject">Môn của bé</string>
    <string name="loading_data">Đang tải dữ liệu…</string>
    <string name="saving_book">Saving…</string>
    <string name="login">Đăng nhập</string>
    <string name="logout">Đăng xuất</string>
    <string name="register">Đăng ký</string>
    <string name="register_successfully">Đăng ký thành công!</string>
    <string name="notification">Thông báo</string>
    <string name="update_profile">Cập nhật hồ sơ</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="login_unsuccessfully">Đăng nhập không thành công!</string>
    <string name="add_book">Add book</string>
    <string name="update_subject">Update subject</string>
    <string name="logout_confirm_message">Bạn có chắc chắn muốn đăng xuất</string>
    <string name="an_error_occurred_please_try_again">Đã có lỗi. Vui lòng thử lại</string>
    <string name="no_data">Không có dữ liệu</string>
    <string name="data_error">Lỗi dữ liệu</string>
    <string name="about_message">Founder:\nBùi Vân Ngọc Bích\n\nDeveloper:\nNguyễn Đức Thịnh\n\nContact:\nfb.com/ducthinhtrai\n\nCreated at 23/06/2021</string>
    <string name="my_name">Tên của bé</string>
    <string name="my_grade">Lớp của bé</string>
    <string name="phone">Số điện thoại</string>
    <string name="please_enter_information">Vui lòng điền thông tin</string>
    <string name="password_invalid">Mật khẩu phải trên 6 kí tự</string>
    <string name="select_image">Chọn ảnh</string>
    <string name="from_gallery">Chọn từ thư viện</string>
    <string name="take_a_picture">Chụp ảnh</string>
    <string name="select_other_username_message">Tên đăng nhập đã tồn tại, vui lòng chọn tên khác!</string>
    <string name="select_page">Chọn trang</string>
    <string name="first_page">Trang đầu</string>
    <string name="page_number">Số trang</string>
    <string name="last_page">Trang cuối</string>
    <string name="show">hiện</string>
    <string name="hide">ẩn</string>
    <string name="tap_again_to_exit">Tap again to exit</string>
    <string name="update">Cập nhật</string>
    <string name="update_profile_successfully">Cập nhật hồ sơ thành công</string>
    <string name="wrong_password">Sai mật khẩu!</string>
    <string name="book_name">Book name</string>
    <string name="start_page">Start page</string>
    <string name="update_book">Update book</string>
    <string name="success">Thành công</string>
    <string name="missing_information">missing information</string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="flip_horizontal">Flip horizontal</string>
    <string name="flip_vertical">Flip vertical</string>
    <string name="please_select_the_book_first">Please select the book first</string>
    <string name="pdf_has_been_corrupted">Pdf has been corrupted</string>
    <string name="get_first_page">Lấy trang bìa</string>
</resources>