<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/margin_12"
        app:cardElevation="@dimen/margin_8">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_12">

            <TextView
                android:id="@+id/tvFirstPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:foreground="?selectableItemBackground"
                android:padding="@dimen/margin_12"
                android:text="@string/first_page"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/margin_12">

                <EditText
                    android:id="@+id/edtPageNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:gravity="end"
                    android:hint="@string/page_number"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTotalPage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="/186"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_18"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_12"
                    android:backgroundTint="@color/black"
                    android:minWidth="0dp"
                    android:text="@android:string/ok"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvLastPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:foreground="?selectableItemBackground"
                android:padding="@dimen/margin_12"
                android:text="@string/last_page"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>