<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="Class"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large" />

        <Spinner
            android:id="@+id/spnClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/margin_4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="@dimen/margin_16"
            android:text="Subject"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large" />

        <Spinner
            android:id="@+id/spnSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16">

            <EditText
                android:id="@+id/edtStartPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/start_page"
                android:inputType="number"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16">

            <EditText
                android:id="@+id/edtBookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_name"
                android:inputType="textCapSentences"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/btnSelectFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select book"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large" />

            <TextView
                android:id="@+id/tvFileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/btnSelectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_image"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large" />

            <ImageView
                android:id="@+id/imvImage"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/avatar_size"
                android:adjustViewBounds="true" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAddBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/add_book"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large" />
    </LinearLayout>
</layout>